# vision-trainer

./: .gitignore  README.md  capacitor.config.ts  package-lock.json  package.json
docs/superpowers/plans/: 2026-05-01-condition-programs-v2.md  2026-05-03-capacitor-ios.md
docs/superpowers/specs/: 2026-05-03-capacitor-ios-design.md
ios/App/App/: Info.plist
ios/App/App.xcodeproj/: project.pbxproj
src/: App.tsx  styles.css  types.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs
src/assessment/: csfMeasurement.ts
src/components/: AnimatedEye.tsx  ContrastTask.tsx  GoalSelection.tsx  HomeScreen.tsx  ProgressDashboard.tsx  SessionFlow.tsx  SettingsScreen.tsx  SkyScene.tsx  TabBar.tsx
src/core/: displayCalibration.ts  gaborRenderer.ts  uuid.ts
src/data/: db.ts
src/programs/: programConfig.ts  programPlanner.ts
src/psychophysics/: quest.ts
src/session/: sessionPlanner.ts
src/store/: useAppStore.ts
src/tasks/: backwardMasking.ts  contrastDetection.ts  lateralMasking.ts  pedestalDiscrimination.ts  spatialMasking.ts
